--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,13 @@
       <li>Coffee</li>
       <li>Tea</li>
       <li>Milk</li>
+      <li>Bread</li>
+      <li>Sambos!!!</li>
+      <li>Ice-cream</li>
+      <li>I love DEvelopment Operations</li>
+      <li>Cream</li>
+      <li>Oil</li>
+      <li>More Oil</li>
       <li>add more...</li>
     </ul>
   </body>
